# patefield

./: CMakeLists.txt  README.md
cmake/: BuildType.cmake  OptimizeForArchitecture.cmake  SimpleOptimizeForArchitecture.cmake
include/patefield/: commons.hpp  patefield.hpp  rcont.hpp
src/: patefield.cpp
